--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,16 @@
 theme: jekyll-theme-slate
-title: Keys to Success
+plugins:
+  - jekyll-relative-links
+relative_links:
+  enabled: true
+  collections: true
+include:
+  - CONTRIBUTING.md
+  - README.md
+  - LICENSE.md
+  - COPYING.md
+  - CODE_OF_CONDUCT.md
+  - CONTRIBUTING.md
+  - ISSUE_TEMPLATE.md
+  - PULL_REQUEST_TEMPLATE.md
 
-# Keys to Success
-
-## Where and when do we meet as a class?
-
-We will be using Desire2Learn (D2L), which is the program you are currently logged into. 
-You will find your readings, videos, discussions, assignments, and quizzes here.
-
-## Where can I find information on what assignments are due each week?
-
-From the Content link in the top menu bar, you will find different modules holding the 
-material that you will complete each week of the course. So for example, in Module 1, 
-you will find the readings, assignments, and discussions that you need to complete by 
-the due dates listed for that module. A detailed breakdown of the course schedule can 
-be found in the course syllabus. Pay attention to this syllabus and it is your 
-responsibility as a student to turn in assignments at their specified due dates. 
-I suggest entering in assignment due dates as well as quizzes and exams into your 
-calendar at the beginning of the semester.
